Return googledrive int status and number of 2FA configured
